--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.2021_01_App">
-        <activity android:name=".Intent2"></activity>
-        <activity android:name=".Intent1">
+
+        <activity android:name=".NullSafety">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +18,10 @@
             </intent-filter>
         </activity>
 
-
-        <activity android:name=".Listener">
-
-        </activity>
+        <activity android:name=".FragmentActivity"></activity>
+        <activity android:name=".Intent2" />
+        <activity android:name=".Intent1" />
+        <activity android:name=".Listener" />
         <activity android:name=".MainActivity" />
     </application>
 
