--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.2021_01_App">
-        <activity android:name=".Thread">
+        <activity android:name=".LibraryActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Context"/>
+        <activity android:name=".Thread"/>
+        <activity android:name=".Context" />
         <activity android:name=".Resource" />
         <activity android:name=".NullSafety" /> <!-- <activity android:name=".FragmentActivity" /> -->
         <activity android:name=".Intent2" />
