--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a2021_01_app">
-    
-    <permission android:name="android.permission.INTERNET"/>
+
+    <permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,14 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.2021_01_App">
-        <activity android:name=".LibraryActivity">
+        <activity android:name=".AddViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Thread"/>
+<!--        <activity android:name=".LibraryActivity"/>-->
+        <activity android:name=".Thread" />
         <activity android:name=".Context" />
         <activity android:name=".Resource" />
         <activity android:name=".NullSafety" /> <!-- <activity android:name=".FragmentActivity" /> -->
