--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.2021_01_App">
-        <activity android:name=".RealmActivity"></activity>
-        <activity android:name=".SharePreferenceActivity">
+        <activity android:name=".AsyncActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RealmActivity"/>
+        <activity android:name=".SharePreferenceActivity" />
         <activity android:name=".TabPager2Activity" />
         <activity android:name=".TabPagerActivity" />
         <activity android:name=".PhoneBookWithRecyclerViewActivity" />
         <activity android:name=".RecyclerViewActivity" />
         <activity android:name=".ListViewActivity" />
         <activity android:name=".PhoneBookDetailActivity" />
-        <activity android:name=".PhoneBookActivity" />
+        <activity android:name=".PhoneBookActivity"/>
         <activity android:name=".AddViewActivity" /> <!-- <activity android:name=".LibraryActivity"/> -->
         <activity android:name=".Thread" />
         <activity android:name=".Context" />
